# griminventory-api

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: github-publish.yml
conf/: supervisor.conf
griminventory_api/: __init__.py  config.py
griminventory_api/api/: items.py  status.py
griminventory_api/notion/: service.py
griminventory_api/templates/: label.xml.j2  prop.xml.j2
griminventory_api/utils/: lbx_generator.py  qr_code_generator.py
